INCLUDE=@INCLUDES@ -I$(top_srcdir)

lib_LIBRARIES = libcppsim.a

libcppsim_a_SOURCES = \
	assertions.hh \
	abatch.cc \
	abatch.hh \
	bmeans2.hh \
	bmeans2.cc \
	coroutine.cc \
	coroutine.hh \
	histogram.cc \
	histogram.hh \
	repmean.cc \
	repmean.hh \
	sqs.cc \
	sqs.hh \
	statfun.cc \
	statfun.hh \
	accum.cc \
	accum.hh \
	counter.cc \
	counter.hh \
	mean.cc \
	mean.hh \
	rng.cc \
	rng.hh \
	sqsDll.cc \
	sqsDll.hh \
	bmeans.cc \
	bmeans.hh \
	dump.cc \
	dump.hh \
	process.cc \
	process.hh \
	sqsPrio.cc \
	sqsPrio.hh \
	welch.cc \
	welch.hh \
	jain.cc \
	jain.hh \
	mrand_seeds.h \
	handle.cc \
	handle.hh \
	quantile.cc \
	quantile.hh \
	trremoval.hh \
	trremoval_R5.cc \
	trremoval_R5.hh \
	trremoval_MSERm.cc \
	trremoval_MSERm.hh \
	var.hh \
	exactvar.hh \
	statistic.hh \
	handle.hh \
	simulation.cc simulation.hh \
	logger.cc logger.hh

EXTRA_DIST = resource.hh mrand.c mrand.h sqsCal.cc sqsCal.hh mrand_seeds.h cppsim.hh trace.hh trace.cc
